--- a/index.html
+++ b/index.html
@@ -95,6 +95,31 @@
   </div>
 
 <script>
+  const checkbox = document.querySelectorAll("input[type=checkbox]");
+
+  let lastChecked;
+
+
+  function handleCheck(e) {
+    let inBetween = false;
+
+    if(e.shiftKey && this.checked) {
+      checkboxes.forEach(checkbox => {
+        if (checkbox === this || checkbox === lastChecked) {
+          inBetween = !inBetween;
+        }
+
+        if(inBetween) {
+          checkbox.checked = true;
+        }
+      })
+    }
+
+
+    lastChecked =  this;
+  }
+
+  checkbox.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 </script>
 </body>
 </html>
